kustomize/service-worker/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-worker
spec:
  selector:
    app: service-worker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
