kustomize/service-worker/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-worker-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: worker.duy.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-worker
                port:
                  number: 80
